Fix horizontal scroll on all pages with reveiw

--- a/webapp/review/style.less
+++ b/webapp/review/style.less
@@ -22,6 +22,7 @@
   visibility: hidden;
   width: 0;
   opacity: 0;
+  overflow: hidden;
 
   .fra-review__issue-comment-input {
     display: none;
